[package]
name = "e"
version = "1.1.0"
edition = "2024"

[lib] 
crate-type = ["cdylib"]

[dependencies]
pumpkin-plugin-api = { version = "0.1.0", git = "https://github.com/Pumpkin-MC/Pumpkin", package = "pumpkin-plugin-api" }
# pumpkin-plugin-api = { path = "../Pumpkin/pumpkin-plugin-api" }
tracing = "0.1"

uuid = { version = "1.23.0", features = ["v4", "serde"] }
phf = { version = "0.13.1", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
lto = true
